change the name in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,17 +10,17 @@ script:
   - docker run -e CI=true ajay/docker-react-test npm test
 
 after_success:
-  - docker build -t ajay/multi-client ./client
-  - docker build -t ajay/multi-nginx ./nginx
-  - docker build -t ajay/multi-server ./server
-  - docker build -t ajay/multi-worker ./worker
+  - docker build -t ajaysoni101/multi-client ./client
+  - docker build -t ajaysoni101/multi-nginx ./nginx
+  - docker build -t ajaysoni101/multi-server ./server
+  - docker build -t ajaysoni101/multi-worker ./worker
 
 # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
 # Take those images and push them to docker hub
 
-  - docker push ajay/multi-client
-  - docker push ajay/multi-nginx
-  - docker push ajay/multi-server
-  - docker push ajay/multi-worker
+  - docker push ajaysoni101/multi-client
+  - docker push ajaysoni101/multi-nginx
+  - docker push ajaysoni101/multi-server
+  - docker push ajaysoni101/multi-worker
