--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,15 @@ after_success:
   - docker push ajaysoni101/multi-nginx
   - docker push ajaysoni101/multi-server
   - docker push ajaysoni101/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-south-1"
+  app: "multi-docker"
+  env: "Multi-docker-env"
+  bucket_name: "elasticbeanstalk-ap-south-1-480321802861"
+  bucket_path: "multi-docker"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
